--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
-/*@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,600italic,700");
-@import url("fontawesome-all.min.css");*/
+/*@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,600italic,700");*/
+/*@import url("fontawesome-all.min.css");*/
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@300&family=Spartan:wght@800&display=swap');
 
 /*
 	Miniport by HTML5 UP
@@ -99,9 +100,9 @@ input, select, textarea {
 
 	body, input, textarea, select {
 		/*font-family: 'Open Sans', sans-serif;*/
+		/*font-family:  -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;*/
 		/*qq*/
-		font-family:  -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
-    sans-serif;;
+		font-family: 'Spartan', sans-serif;
 		line-height: 1.85em;
 		color: #888;
 		font-weight: 300;
@@ -209,6 +210,8 @@ input, select, textarea {
 
 	header {
 		margin: 0 0 3em 0;
+		/*qq*/
+		line-height: 1.1;
 	}
 
 		header > p {
@@ -1631,7 +1634,7 @@ input, select, textarea {
 	}
 
 		.image img {
-			display: block;
+			/*display: block;*/
 			width: 100%;
 		}
 
@@ -2114,8 +2117,9 @@ input, select, textarea {
 
 		#top .image {
 			border-radius: 100%;
-			width: 20em;
-			height: 20em;
+			/*qq*/
+			width: 25em;
+			height: 25em;
 			margin: 0;
 		}
 
