--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -233,6 +233,23 @@ input, select, textarea {
 		box-shadow: 30px -30px 0px 0px #FDBB2F;
 		}
 
+	/*	qq*/
+	img.left {
+	    box-shadow: -10px 10px 0px 0px #FDBB2F;
+	    /*margin:  top right bottom left;*/
+		margin: .5em 2em 2em 0;
+		width: 300px;
+		float: left;
+		}
+
+	/*	qq*/
+	img.right {
+	    box-shadow: 10px 10px 0px 0px #FDBB2F;
+			margin: .5em 0 2em 2em;
+			width: 300px;
+			float: right;
+		}
+
 /* Container */
 
 	.container {
