--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,17 @@
+/*colors*/
+/*
+OLD
+#282828
+
+NEW
+#5B0202
+#e2bf8a
+
+*/
+
+
+
+
 /*@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,600italic,700");*/
 @import url("fontawesome-all.min.css");
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@300&family=Spartan:wght@800&display=swap');
@@ -114,7 +128,9 @@ input, select, textarea {
 		-webkit-transition: color .2s ease-in-out;
 		-ms-transition: color .2s ease-in-out;
 		transition: color .2s ease-in-out;
-		color: #43B3E0;
+/*		qq*/
+/*		color: #43B3E0;*/
+		color: #5B0202;
 		text-decoration: underline;
 	}
 
@@ -230,12 +246,13 @@ input, select, textarea {
 
 	div.shadow {
 		/*qq*/
-		box-shadow: 30px -30px 0px 0px #FDBB2F;
+/*		box-shadow: 30px -30px 0px 0px #FDBB2F;*/
+		box-shadow: 30px -30px 0px 0px #E2BF8A;
 		}
 
 	/*	qq*/
 	img.left {
-	    box-shadow: -10px 10px 0px 0px #FDBB2F;
+	    box-shadow: -10px 10px 0px 0px #E2BF8A;
 	    /*margin:  top right bottom left;*/
 		margin: .5em 2em 2em 0;
 		width: 300px;
@@ -244,7 +261,7 @@ input, select, textarea {
 
 	/*	qq*/
 	img.right {
-	    box-shadow: 10px 10px 0px 0px #FDBB2F;
+	    box-shadow: 10px 10px 0px 0px #E2BF8A;
 			margin: .5em 0 2em 2em;
 			width: 300px;
 			float: right;
@@ -1715,7 +1732,9 @@ input, select, textarea {
 		text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
 		overflow: hidden;
 		box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5), inset 0px 2px 1px 0px rgba(255, 255, 255, 0.75);
-		background-color: #43B3E0;
+/*		qq*/
+/*		background-color: #43B3E0;*/
+		background-color: #5B0202;
 		padding: 1em 2.35em 1em 2.35em;
 		font-size: 1.1em;
 		max-width: 24em;
@@ -1726,7 +1745,9 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #43bff0;
+/*			qq*/
+/*			background-color: #43bff0;*/
+			background-color: #E2BF8A;
 			color: #fff !important;
 		}
 
@@ -1835,8 +1856,10 @@ input, select, textarea {
 					transition: background-color .2s ease-in-out;
 					background-color: #444;
 					border-radius: 6px;
-					box-shadow: inset 0px 0px 0px 1px #282828, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
-					color: #2E2E2E !important;
+					box-shadow: inset 0px 0px 0px 1px #5B0202, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
+/*					qq*/
+/*					color: #2E2E2E !important;*/
+					color: #E2BF8A !important;
 					display: block;
 					font-size: 26px;
 					height: 48px;
@@ -1881,7 +1904,9 @@ input, select, textarea {
 				}
 
 				ul.social li a.fa-instagram {
-					background-color: #E0D7C8;
+/*					qq*/
+/*					background-color: #E0D7C8;*/
+					background-color: #5B0202;
 				}
 
 				ul.social li a.fa-foursquare {
@@ -2038,9 +2063,13 @@ input, select, textarea {
 		}
 
 		.wrapper.style4 {
-			background-color: #303030;
-			color: #999;
-			text-shadow: -1px -1px 0px #181818;
+/*			qq*/
+/*			background-color: #303030;*/
+			background-color: #E2BF8A;
+/*			color: #999;*/
+			color: #666666;
+/*			text-shadow: -1px -1px 0px #181818;*/
+/*			text-shadow: -1px -1px 0px #5B0202;*/
 		}
 
 			.wrapper.style4 h1, .wrapper.style4 h2, .wrapper.style4 h3, .wrapper.style4 h4, .wrapper.style4 h5, .wrapper.style4 h6 {
@@ -2065,7 +2094,7 @@ input, select, textarea {
 /* Nav */
 
 	#nav {
-		background-color: #282828;
+		background-color: #5B0202;
 		text-align: center;
 		position: fixed;
 		left: 0;
@@ -2124,7 +2153,7 @@ input, select, textarea {
 					margin-left: -0.75em;
 					border-left: solid 0.75em transparent;
 					border-right: solid 0.75em transparent;
-					border-top: solid 0.6em #282828;
+					border-top: solid 0.6em #5B0202;
 				}
 
 /* Articles */
