--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2081,7 +2081,8 @@ input, select, textarea {
 			.wrapper.style4 form select,
 			.wrapper.style4 form textarea {
 				border: none;
-				background: #282828;
+/*				background: #282828;*/
+				background: #999999;
 			}
 
 				.wrapper.style4 form input[type=text]:focus,
