--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,7 @@ NEW
 /*@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,600italic,700");*/
 @import url("fontawesome-all.min.css");
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@300&family=Spartan:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@300&family=Sanchez:wght@800&display=swap');
 
 /*
 	Miniport by HTML5 UP
